scheduling groups: Adding per scheduling group data support
Scheduling groups (per shard) are comparable to threads in the sence that at
any given moment only one task can run per scheduling group (per shard).
One of the basic utilities for per thread management is pthread specific
data support through the pthread_getspecific.
This patch introduces similar mechanism inspired by the aformentiond
utility.
It allows for creating keys that contains objects or primitives. Once a
key configuration is set and a key is generated, an alocation will occure
for every new scheduling group that will be created and the constructor will be
called (if exists).
The data is always created and destroyed in the owning scheduling group's context.

The api inself contains two versions:
1. A global one that supports getting a specified value for the current sg or a specified
one.
2. An addition to the sg object that can get the specific value for the sg.

Two more API functions that were implemented are:
1. map_reduce over the values from all of the scheduling groups.
2. reduce over the values from all of the scheduling groups.

Testing:
New unit tests were added to test all of the above api.

Testing: Unit tests in dev mode and debug mode.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -377,6 +377,9 @@ seastar_add_test (stall_detector
 seastar_add_test (thread
   SOURCES thread_test.cc)
 
+seastar_add_test (scheduling_group
+  SOURCES scheduling_group_test.cc)
+
 seastar_add_app_test (thread_context_switch
   SOURCES thread_context_switch_test.cc)
 
